# PicoW-usb2bt-audio

./: .gitignore  CMakeLists.txt  README.md  aac-eld-apple.md  btstack_config.h  build.sh  notes  tusb_config.h
boards/: waveshare_rp2350b_plus_w.h
src/: main.c  pico_w_led.c  pico_w_led.h  usb_sound.c  usb_sound.h
src/btstack/: bt_audio.c  bt_audio.h  btstack_avdtp_source.c  btstack_avdtp_source.h  btstack_hci.c  btstack_hci.h
src/btstack/aosp/: a2dp_vendor_ldac_constants.h
src/tinyusb/: uac.c  uac.h  usb_descriptors.c  usb_descriptors.h
